updated connection related logics and endpoints